# Head

# 0.3.2 - 2014 July 28th

- Replaced Nokogiri with Ox

# 0.3.1 - 2014 July 25th

- Fixed so that compiling and testing works even if --no-rakefile is specified

# 0.3.0 - 2014 July 24th

- Shim extension not needed on generated Ruby to C interface code (BREAKING CHANGE), which means that excel_to_c generates a more-or-less drop in replacement for excel_to_ruby 
- Added --rakefile and ---makefile and --no-rakefile and --no-makefile switches to excel_to_c
- By default, now generates a Rakefile (BREAKING CHANGE)

# 0.2.30 - 2014 July 24th

- Implemented 0.000 in C version of TEXT function (already works in ruby version)

# 0.2.29 - 2014 July 2nd

- Now replaces table references that have been interpreted as named references
- Implemented 0.0 and 0000 and #,## as formats in the TEXT function
- RIGHT and LEFT can now be applied to an array
- Fixed INDEX when passed zero as a row or column number when only one row or column wide
- Implemented the ISERR() function in ruby and in C
- Implmeneted the LOG10() function

# 0.2.28 - 2014 June 16th

- Fixed a bug that would lead to some numbers being truncated to integers in the C version of the output

# 0.2.27 - 2014 June 16th

- named_references_to_keep and named_references_that_can_be_set_at_runtime can now refer to table names

# 0.2.26 - 2014 June 10th

- When pruning cells, now checks for circular references
- Added a better error message if expanding array formulae fails
- Now doesn't mistakenly inline sheet specific named references
- Made the array formula expansion more robust to mismatched array sizes

# 0.2.25 - 2014 May 23rd

- Implemented the LN function in ruby and C
- Tweaks to the array formulae code to try and speed it up
- Tightened dependency version numbers in gemspec to eliminate warnings when building gem

# 0.2.24 - 2014 May 16th

- Fixed the simplification of SUMIFS when it has errors as arguments

# 0.2.23 - 2014 May 7th

- Fixed the simplification of SUMIFS when a criteria is blank