@@ -1,5 +1,7 @@
 # Head
 
+- Ruby version of FIND function now works when arguments are not strings
+
 # 0.3.2 - 2014 July 28th
 
 - Replaced Nokogiri with Ox
